# PCAPdroid

./: .gitignore  .gitmodules  CHANGELOG.md  DONORS.txt  README.md  TODO.md  _config.yml  advanced_features.md  app-ads.txt  build.gradle  donate.md  dump_modes.md  faq.md  funding.json  gradle.properties  index.md  network_requests.csv  paid_features.md  privacy.md  quick_start.md  settings.gradle  tls_decryption.md  tls_decryption_new.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: debug-build.yml  debug_apk_build.yml  gradle-wrapper-validation.yml  native-tests.yml  pull-requests-debug-build.yml  pushes-debug-build.yml  windows-build.yml
ICONS_LICENSE/app_icon/: Attribution.txt
_layouts/: default.html
app/: TODO.md  build.gradle  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/: maxmind
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/common/: CMakeLists.txt  jni_utils.c  jni_utils.h  memtrack.h  uid_lru.c  uid_lru.h  uid_resolver.c  uid_resolver.h  utils.c  utils.h
app/src/main/jni/core/: CMakeLists.txt  blacklist.c  blacklist.h  capture_libpcap.c  capture_pcap.c  capture_root.c  capture_vpn.c  errors.h  jni_impl.c  log_writer.c  log_writer.h  ndpi_config.c  ndpi_master_protos.c  pcap_dump.c  pcap_dump.h  pcap_reader.c  pcap_reader.h  pcap_utils.c  pcap_utils.h  pcapdroid.c  pcapdroid.h  port_map.c  port_map.h  ushark_dll.c  ushark_dll.h
app/src/main/jni/pcapd/: CMakeLists.txt  README.md  nl_utils.c  nl_utils.h  pcapd.c  pcapd.h  pcapd_priv.h
app/src/main/jni/tests/: CMakeLists.txt  Makefile  README.md  blacklist.c  dpi.c  dump_api.c  fuzz_utils.c  pcap_reader.c  run_fuzz.sh  run_tests.sh  test_utils.c  test_utils.h
app/src/main/jni/tests/fuzz/: CMakeLists.txt  fuzz_capture.c  fuzz_pcapd.c
app/src/main/jni/tests/pcap/: README.md  crash-593ec6ead7a1bf23faa96d03cbd74c315bcf67fc  http_proxy.pcap  invalid_or_unsupported.pcap  metadata.pcap  two_flows.pcap
app/src/main/jni/tests/test/: CMakeLists.txt  blacklist.c  dpi.c  dump_api.c  root_capture.c
app/src/main/jni/vpnproxy-jni/: CMakeLists.txt  blacklist.c  blacklist.h  capture_proxy.c  capture_root.c  crc32.c  ip_lru.c  ip_lru.h  jni_helpers.c  jni_helpers.h  ndpi_master_protos.c  ndpi_master_protos.h  pcap.c  pcap.h  pcap_utils.c  pcap_utils.h  uid_resolver.c  uid_resolver.h  utils.c  vpnproxy.c  vpnproxy.h
app/src/main/jni/zstd/: CMakeLists.txt  zstd_jni.c
app/src/main/res/: raw
app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: ad_background.xml  banner.xml  bars_staggered_solid.xml  capture_app_badge_bg.xml  ic_active_connection.xml  ic_add.xml  ic_app_crash.xml  ic_apps.xml  ic_arrow_drop_down.xml  ic_baseline_javascript.xml  ic_block.xml  ic_book.xml  ic_check_solid.xml  ic_checklist.xml  ic_content_copy.xml  ic_content_copy_small.xml  ic_copyright.xml  ic_delete.xml  ic_exclamation_triangle_solid.xml  ic_external.xml  ic_eye.xml  ic_eye_slash.xml  ic_file_export.xml  ic_file_import.xml  ic_filter.xml  ic_filter_alt.xml  ic_github.xml  ic_help.xml  ic_hourglass_top.xml  ic_image.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_list.xml  ic_location_dot.xml  ic_lock.xml  ic_lock_open.xml  ic_logo.xml  ic_malware_detection.xml  ic_media_stop.xml  ic_money.xml  (+28 more)
app/src/main/res/drawable-anydpi/: settins_icon.xml
app/src/main/res/drawable-v23/: splash_screen.xml
app/src/main/res/layout/: about_activity.xml  active_filter_chip.xml  activity_connection_details.xml  activity_main.xml  activity_stats.xml  activity_tesi_analysis.xml  activity_tesi_data.xml  activity_tesi_entry.xml  activity_tesi_login.xml  add_port_mapping_dialog.xml  add_rule_dialog.xml  app_bar.xml  app_details_activity.xml  app_installed_item.xml  app_item.xml  app_overview.xml  app_selection_item.xml  apps_activity.xml  apps_selector.xml  apps_stats.xml  blacklist_item.xml  capture_list_fragment.xml  capture_list_item.xml  choice_chip.xml  connection_item.xml  connection_overview.xml  connection_payload.xml  connections.xml  ctrl_consent.xml  data_view_container.xml  dropdown_item.xml  edit_filter_activity.xml  edit_filter_dialog.xml  edit_list_fragment.xml  edit_mask_activity.xml  edit_mask_fragment.xml  error_activity.xml  exclusion_item.xml  exclusion_list.xml  (+41 more)
app/src/main/res/layout-sw480dp/: status.xml
assets/css/: style.scss
docs/: app_api.md  edge-to-edge.md  how_it_works.md  languages.md  testing.md  work_profiles.md
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/es/: full_description.txt  short_description.txt
fastlane/metadata/android/id/: full_description.txt  short_description.txt
fastlane/metadata/android/it/: full_description.txt  short_description.txt
fastlane/metadata/android/ko-KR/: full_description.txt  short_description.txt
fastlane/metadata/android/nb-NO/: full_description.txt  short_description.txt
fastlane/metadata/android/pl-PL/: full_description.txt  short_description.txt
fastlane/metadata/android/pt-BR/: full_descripfull.txt  full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/tr/: full_description.txt  short_description.txt
fastlane/metadata/android/uk/: full_description.txt  short_description.txt
fastlane/metadata/android/vi/: short_description.txt
gradle/wrapper/: gradle-wrapper.properties
nDPI/: CMakeLists.txt
ndpi/: build.gradle
ndpi/src/main/: AndroidManifest.xml  CMakeLists.txt
ru/: advanced_features.md  donate.md  dump_modes.md  faq.md  index.md  paid_features.md  privacy.md  quick_start.md  tls_decryption.md
tools/: pcapdroid.lua  pcapdroid_mitm.py  pcapdroid_udpdump.lua  udp_receiver.py  weblate.py  weblate_status
zdtun/: build.gradle
zdtun/src/main/: AndroidManifest.xml
(+314 files in other folders)
